--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,6 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <property name="java-output-path" value="/medimage/target/classes"/>
-        <property name="context-root" value="medimage"/>
+        <property name="context-root" value="tittineShare"/>
     </wb-module>
 </project-modules>
