--- a/src/main/webapp/resources/css/tittineShare.css
+++ b/src/main/webapp/resources/css/tittineShare.css
@@ -3,7 +3,7 @@ html{
 }
 #header{
 	width:100%;
-	background:#79D2FF;	
+	background:#00ff80;	
 	overflow: hidden; /*Empêche height = 0*/
 	padding:5px 0;
 }
