--- a/src/main/webapp/resources/css/tittineShare.css
+++ b/src/main/webapp/resources/css/tittineShare.css
@@ -4,7 +4,7 @@ html, body{
 }
 #header{
 	width:100%;
-	background:#82b9a6;	
+	background:#b9d5bf;	
 	overflow: hidden; /*Empêche height = 0*/
 	padding:5px 0;
 }
@@ -18,7 +18,33 @@ html, body{
 	margin-top: 25px;
 }
 #header img{
-	max-height:100px;
+	max-height:30px;
+}
+#header #logo{
+	max-height:120px;
+}
+a{
+	text-decoration:none;
+	outline:none;
+}
+div.action{
+	width:30%;
+	padding:30px;
+	background:#deceb7;
+	margin: 30px auto;
+}
+.action span{
+	font-size:38px;
+	font-weight: 700;
+}
+.action a{
+		text-decoration:none;
+	outline:none;
+	color:#333;
+}
+.action span:hover{
+	color:#fff;
+	cursor: pointer;
 }
 .menu {
 	display:block;
@@ -40,6 +66,15 @@ html, body{
 .menu li:hover > a{
 	color:#fff;
 }
+.titreSection{
+	font-size: 28px;
+	text-align: center;
+}
+.separateur{
+	width:60%;
+	height: 2px;
+	background:#b9d5bf;
+}
 .gauche{
 	float:left;
 }
@@ -52,50 +87,7 @@ html, body{
 li.options{
 	padding:0;
 }
-.pagination{
-	width: 100%;
-}
-.titreRecherche{
-	text-align:center;
-}
-.tableauFoo{
-	max-width:1280px;
-	margin:auto;
-}
-#ajoutMeta{
-	margin-top:10px;
-}
-#listeMetadatas, #chosenTags{
-	border:1px solid black;
-	overflow:auto;
-	min-height:30px;
-	display: block;
-  	width: 100%;
-	color: #555;
-	background-color: #fff;
-	background-image: none;
-	border: 1px solid #ccc;
-	padding: 6px 12px;
-	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-	-webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
-	-o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-	transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-}
 
-.metadata, .tag{
-	display:inline-block;
-	color: #fff;
-	padding: 6px 12px 6px 12px;
-	margin-right: 7px;
-	background: #777;
-	overflow: auto;
-}
-#presentationExamen{
-	max-width:1280px;
-	margin:0 auto 30px auto;
-	margin:
-}
 .blocPresentation{
 	overflow:auto;
 	width:100%;
@@ -109,6 +101,7 @@ li.options{
 	font-weight:bold;
 	font-size:16px;
 }
+
 table{
 	margin-top:20px;
 }
@@ -117,4 +110,8 @@ table{
     display: inline-block;
     height: 100%;
     vertical-align: middle;
+}
+
+form{
+	padding-top:30px;
 }
